yiltc-v0.2-backup/testsuite/negative/table_value_type_mismatch.yilt
// Negative test: table index assign with wrong value type.
// Table has int values from literal, but we try to assign a string.

fn main()
    let mut t = {"a": 1, "b": 2}
    t["c"] = "wrong"
